Fixed display of unnecessary scrollbars (-> http://stackoverflow.com/questions/4640348/why-do-scrollbars-appear-when-using-a-svg-element-inside-a-div)

--- a/PyWireGate/trunk/logic_editor/logicEditor.css
+++ b/PyWireGate/trunk/logic_editor/logicEditor.css
@@ -62,3 +62,7 @@ h2 {
   height: 100%;
   width: 100%;
 }
+
+#editor svg {
+  display: block;
+}
